# yallo-lang

./: .gitignore  LICENSE  Makefile  README.md  SUMMARY.md  failing.yallo  t.sh  yallo.opam
docs/: contract-interoperability.md  contract-structure.md  control-flow.md  crypto-functions.md  expressions.md  function-and-constant.md  grammar.ebnf  helper-functions.md  import.md  interface.md  tezos-functions.md
docs/types/: README.md  composed-types.md  tezos-types.md  untitled.md
lib/: .merlin  ast.ml  ast_decl.ml  ast_env.ml  ast_expr.ml  ast_statement.ml  ast_ttype.ml  compiler.ml  dune  errors.ml  generate_coq.ml  generate_interface.ml  generate_ligo.ml  generate_michelson.ml  generate_utility.ml  interface_of_michelson.ml  intermediate.ml  lexer.mll  loc.ml  parse_tree.ml  parser.messages  parser.mly  passes.ml  translate_pdecl.ml  translate_pexpr.ml  translate_pstatement.ml  translate_ptype.ml
lib/helpers/: .merlin  dune  errors.ml  gen_utils.ml  loc.ml
lib/passes/1_parsing/: .merlin  dune  lexer.mll  loc.ml  parser.messages  parser.mly  parsing.ml  pt_loc.ml
lib/passes/2_parse_tree_postprocess/: .merlin  dune  parse_tree_postprocess.ml
lib/passes/2_parse_tree_to_ast/: .merlin  dune  parse_tree_to_ast.ml  translate_pexpr.ml  translate_ptype.ml
lib/passes/3_ast_to_coq/: .merlin
lib/passes/3_ast_to_interface/: .merlin  dune
lib/passes/3_ast_to_ligo/: .merlin  dune
lib/passes/3_parse_tree_to_ast/: .merlin  ast_loc.ml  dune  env.ml  parse_tree_to_ast.ml  translate_pdecl.ml  translate_pexpr.ml  translate_ptype.ml
lib/passes/4_ast_remove_unused/: .merlin  ast_remove_unused.ml  dune  unused_const.ml  unused_contract.ml  unused_field.ml
lib/passes/4_ast_to_coq/: .merlin
lib/passes/4_ast_to_interface/: .merlin  ast_to_interface.ml
lib/passes/4_ast_to_ligo/: .merlin  ast_to_ligo.ml
lib/passes/5_ast_to_coq/: .merlin  ast_to_coq.ml  dune  pp_cexpr.ml  pp_ctype.ml
lib/passes/5_ast_to_ligo/: .merlin  ast_to_ligo.ml  dune  pp_lexpr.ml  pp_ltype.ml
lib/tools/interface_of_michelson/: .merlin  dune
lib/tools/michelson/: .merlin  ast.ml  dune  lexer.mll  parser.mly
src/: .merlin  ast.ml  ast_expr.ml  ast_statement.ml  ast_ttype.ml  compiler.ml  dune  lexer.mll  parse_tree.ml  parser.mly  typecheck.ml  typechecker.ml  typed.ml  yallo.ml
test/: .merlin  dummy_import.yallo  dune  fa12.yallo  loan.yallo  test.ml  test3.yallo  test_declarations.yallo  test_expr.yallo  test_interface.yallo  test_literal.yallo  test_statements.yallo  test_typemod.yallo  test_types.yallo  usign_fa12.yallo
test/compiler/: comments.yallo  pragma.yallo
test/const/: cont.yallo  crypto_f.yallo  enum.yallo  expr.yallo  infer.yallo  lambda.yallo  lambda_fail.yallo  let_expr.yallo  let_infer.yallo  numeric.yallo  string.yallo
test/contract/: assert_test.yallo  cenum.yallo  coq_test.yallo  crec.yallo  ctor_fail.yallo  ctor_ok.yallo  field_enum.yallo  field_list.yallo  field_unbound.yallo  itoken.yallo  king_of_tezos.yallo  king_of_tezos_lambdalized.yallo  lambda_field.yallo  lambda_map.yallo  loan.yallo  token.yallo  token_create.yallo  token_using.yallo  token_with_view.yallo  unused_contract.yallo  view.yallo
test/decl/function/: base_fun.yallo  wrong_return_type.yallo
test/expr/: assoc.yallo  assoc_bool.yallo  lambda.yallo  lazy.yallo  list_bfun.yallo  literal.yallo  literal_fail_infer.yallo  literal_untyped.yallo  match.yallo  match_case.yallo  neg_fail.yallo  pack_unpack.yallo  record.yallo  set_bfun.yallo  timestamp_duration.yallo  timestamp_of.yallo  tuple_destruct.yallo  tuple_destruct_typed.yallo  tuple_destruct_untyped.yallo
test/function/: base_fun.yallo  wrong_return_type.yallo
test/import/: a.yallo  interface.yallo  type.yallo
test/interface/: dup_entry_fail.yallo  duplicate_fail.yallo  extend.yallo  i1.yallo  view.yallo
test/misc/: declarations.yallo  literal.yallo  record.yallo  statements.yallo  types.yallo
test/random/: declarations.yallo  statements.yallo  typemod.yallo  types.yallo
test/type/: list_methods.yallo  option_methods.yallo  types.yallo
vsext/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vsext/syntaxes/: yallo.tmLanguage.json
yallo-stdlib/: fa12.yallo  fa12_know.yallo  ifa12.yallo
