(library
 (public_name yallo)
 (name yallo)
 (preprocess (pps ppx_jane ppx_deriving.show))
 (libraries core ppx_deriving menhirLib)
 (modules parse_tree ast_ttype ast_expr ast_env errors generate_coq generate_ligo
  translate_pdecl translate_ptype translate_pexpr ast parser lexer compiler))

(ocamllex lexer)

(menhir 
 (modules parser)
 (flags --explain --inspection --table --dump)
)

(env
  (dev
    (flags (:standard -warn-error -A))))
