(library
 (public_name yallo)
 (name yallo)
 (libraries 
  helpers
  parse_tree
  parsing  
  parse_tree_postprocess
  ast
  ast_remove_unused
  parse_tree_to_ast
  ast_to_ligo 
  ast_to_interface 
  ast_to_coq
 )
 (modules intermediate passes compiler interface_of_michelson))


(env
  (dev
    (flags (:standard -warn-error -A))))
