(executable
 (public_name yallo)
 (name yallo)
 (preprocess (pps ppx_jane ppx_deriving.show))
 (libraries core ppx_deriving menhirLib)
 (modules yallo parse_tree ast typechecker parser lexer compiler))

(ocamllex lexer)

(menhir 
 (modules parser)
 (flags --explain --inspection --table --dump)
)

(env
  (dev
    (flags (:standard -warn-error -A))))
