(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(executable
 (public_name yallo)
 (name yallo)
 (preprocess (pps ppx_jane ppx_deriving.show))
 (libraries core ppx_deriving menhirLib)
 (modules yallo parse_tree typed parser lexer compiler))

(ocamllex lexer)

(menhir 
 (modules parser)
 (flags --explain --inspection --table --dump)
)

(env
  (dev
    (flags (:standard -warn-error -A))))
