(library
 (name parse_tree_to_ast)
 (public_name yallo.passes.parse_tree_to_ast)
 (preprocess (pps ppx_jane ppx_deriving.show))
 (libraries num ppx_deriving helpers parse_tree ast parsing)
 (modules env ast_loc parse_tree_to_ast translate_pdecl translate_pexpr translate_ptype))

(env
  (dev
    (flags (:standard -warn-error -A))))
